fixed the branching mess + hashtag alignment on sun slider

--- a/static/sass/UI/TimePicker.sass
+++ b/static/sass/UI/TimePicker.sass
@@ -68,6 +68,9 @@
 			padding-bottom: 1rem
 			padding-right: 1rem
 			padding-left: 1rem
+			left: 50%
+			transform: translateX(-50%)
+			white-space: nowrap
 
 @media screen and (min-width: $desktop-min-width)
 	.timePicker--wrapper
